@@ -50,7 +50,7 @@ public class MapSimpleTypeSchemaExtractionTests {
         when(mockPackageManager.getPackageInfo(anyString(), anyInt())).thenReturn(mockPackageInfo);
         when(mockApplication.getApplicationInfo()).thenReturn(mockApplicationInfo);
         when(mockApplication.getSharedPreferences(anyString(), anyInt())).thenReturn(mockSharedPrefs);
-        when(mockSharedPrefs.getString(anyString(), (String) eq(null))).thenReturn("");
+        when(mockSharedPrefs.getString(anyString(), eq(null))).thenReturn("");
         when(mockApplication.getApplicationContext()).thenReturn(mockApplication);
         when(mockApplication.getContentResolver()).thenReturn(mock(ContentResolver.class));
         when(mockSharedPrefs.edit()).thenReturn(mockEditor);
@@ -65,13 +65,13 @@ public class MapSimpleTypeSchemaExtractionTests {
         Map testMap = new HashMap();
         short sh = 1;
         byte bt = 2;
-        testMap.put("v0", new Integer(3));
+        testMap.put("v0", Integer.valueOf(3));
         testMap.put("v1", 4);
         testMap.put("v2", 5L);
-        testMap.put("v3", new Long(6));
-        testMap.put("v4", new Short("7"));
+        testMap.put("v3", Long.valueOf(6));
+        testMap.put("v4", Short.valueOf("7"));
         testMap.put("v5", sh);
-        testMap.put("v6", new Byte("8"));
+        testMap.put("v6", Byte.valueOf("8"));
         testMap.put("v7", bt);
 
         Map<String, AvoEventSchemaType> schema = sut.extractSchema(testMap);
@@ -108,7 +108,7 @@ public class MapSimpleTypeSchemaExtractionTests {
     public void canExtractBoolean() {
         Map testMap = new HashMap();
 
-        testMap.put("v0", new Boolean(true));
+        testMap.put("v0", Boolean.TRUE);
         testMap.put("v1", false);
 
         Map<String, AvoEventSchemaType> schema = sut.extractSchema(testMap);
